Adds structured data

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,20 @@
       gtag('config', 'UA-139876979-1');
     </script>
 
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "url": "http://www.monumentmonitor.co.uk",
+        "logo": "https://www.monumentmonitor.co.uk/static/media/mmt-main-logo.6f880e61.png",
+        "contactPoint": [
+          { "@type": "ContactPoint",
+            "telephone": "+44-7909-608-164",
+            "contactType": "customer service"
+          }
+        ]
+      }
+    </script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
