--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="shortcut icon" href="/new-site/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/><meta name="theme-color" content="#000000"/><script async src="https://www.googletagmanager.com/gtag/js?id=UA-139876979-1"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-139876979-1")</script><script type="application/ld+json">{
         "@context": "https://schema.org",
         "@type": "Organization",
-        "url": "http://www.monumentmonitor.co.uk",
-        "logo": "https://www.monumentmonitor.co.uk/static/media/mmt-main-logo.6f880e61.png",
+        "url": "htts://monumentalconservation.github.io/new-site/",
+        "logo": "https://monumentalconservation.github.io/new-site/static/media/mmt-main-logo.6f880e61.png",
         "contactPoint": [
           { "@type": "ContactPoint",
             "telephone": "+44-7909-608-164",
