change site name

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "url": "http://www.monumentmonitor.co.uk",
-        "logo": "https://www.monumentmonitor.co.uk/static/media/mmt-main-logo.6f880e61.png",
+        "url": "http://monumentalconservation.github.io/original-site/",
+        "logo": "https://monumentalconservation.github.io/original-site/static/media/mmt-main-logo.6f880e61.png",
         "contactPoint": [
           { "@type": "ContactPoint",
             "telephone": "+44-7909-608-164",
