--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="shortcut icon" href="/original-site/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/><meta name="theme-color" content="#000000"/><script async src="https://www.googletagmanager.com/gtag/js?id=UA-139876979-1"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-139876979-1")</script><script type="application/ld+json">{
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="shortcut icon" href="/original-site/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/><meta name="theme-color" content="#000000"/><script type="application/ld+json">{
         "@context": "https://schema.org",
         "@type": "Organization",
         "url": "http://monumentalconservation.github.io/original-site/",
